<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/ic_gamepad"
        android:title="@string/nav_games" />
    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_offer"
        android:title="@string/nav_offers" />
    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/nav_wishlist" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>